--- a/index.html
+++ b/index.html
@@ -27,19 +27,44 @@
     input{
         font-size:1.1em;
     }
-    @keyframes rotation {
-        from { transform: rotate(0deg); }
-        to   { transform: rotate(359deg); }
-    }
-    .rotate{
-        animation: rotation 1s infinite linear;
-        width: 1em;
-        margin: auto;
-        position: relative;
-    }
-    .rotate img{
-        width: 1em;
-    }    
+
+/* CC0-licensed code from https://loading.io/css/ */
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid black;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: black transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
     .loader{
         position:fixed;
         z-index:100;
@@ -61,7 +86,7 @@
     <h1 id="title"></h1>
     <p id="credits"></p>
     <div id="filters"></div>
-    <div class="loader"><div class="rotate">&#127757;</div><em>Chargement des données en cours, merci d'attendre quelques secondes...</em></div>
+    <div class="loader"><!-- CC0-licensed code from https://loading.io/css/ --><div class="lds-ring"><div></div><div></div><div></div><div></div></div><br><em>Chargement des données en cours, merci d'attendre quelques secondes...</em></div>
     <table>
         <tr id="column-heading"></tr>
     </table>
