:lipstick: (footer) footer with link to the code

--- a/index.html
+++ b/index.html
@@ -273,6 +273,12 @@
         })
 
     </script>
+    <footer>
+    Site web propulsé par <a href="https://github.com/PhilippeGambette/web-gsdb">web-gsdb</a>, outil de déploiement de site web à partir d'une base de données stockée sur Google Sheets.
+    </footer>
 </body>
+
+
+
 
 </html>
