:sparkles: (header) custom title and favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" id="favicon" type="image/png" href="">
+    <title>Site web propuslé par web-gsdb</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"
         integrity="sha512-dfX5uYVXzyU8+KHqj8bjo7UkOdg18PaOtpa48djpNbZHwExddghZ+ZmzWT06R5v6NSk3ZUfsH6FNEDepLx9hPQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -247,6 +248,8 @@
                         }
                     }
                 })
+                document.querySelector("title").innerHTML = document.querySelector("#title").innerText;
+                document.querySelector("#favicon").setAttribute("href", document.querySelector("#image").getAttribute("src"));
 
                 // Load the data into the table
                 Papa.parse(infos.url, {
@@ -277,8 +280,4 @@
     Site web propulsé par <a href="https://github.com/PhilippeGambette/web-gsdb">web-gsdb</a>, outil de déploiement de site web à partir d'une base de données stockée sur Google Sheets.
     </footer>
 </body>
-
-
-
-
 </html>
