:lipstick: (accessibility) larger font for credits

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         margin-top:10px;
         font-size:1.2em;
     }
-    input{
+    input,#credits{
         font-size:1.2em;
     }
     .sortA,.sortD{
