:lipstick: (filters) infos about how to use the filters

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <img id="image" style="float:left;width:130px">
     <h1 id="title"></h1>
     <p id="credits"></p>
-    <div id="filters"></div>
+    <div id="filters"><h2>Filtres</h2><p>Les champs ci-dessous sont des filtres : seules sont affichées les lignes qui contiennent, pour le ou les champs que vous avez complétés, une valeur qui inclut ce que vous avez écrit dans le champ (en ignorant la casse).</p></div>
     <div class="loader"><!-- CC0-licensed code from https://loading.io/css/ --><div class="lds-ring"><div></div><div></div><div></div><div></div></div><br><em>Chargement des données en cours, merci d'attendre quelques secondes...</em></div>
     <table>
         <tr id="column-heading"></tr>
