:lipstick: (multimedia files) favicon

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </style>
 
 <body>
-    <img src="Julie%20Candeille.png" title="Source : Anonyme, Mademoiselle Maupin de l'Opéra, Bibliothèque nationale de France, département Estampes et photographie, RESERVE FOL-QB-201 (74), Gallica" id="image" style="float:left;width:130px">
+    <img src="img/Julie_Candeille.png" title="Source : Anonyme, Mademoiselle Maupin de l'Opéra, Bibliothèque nationale de France, département Estampes et photographie, RESERVE FOL-QB-201 (74), Gallica" id="image" style="float:left;width:130px">
     <h1 id="title">Théâtre de femmes 16-18</h1>
     <p id="credits"></p>
     <div id="filters"><h2>Filtres</h2><p>Les champs ci-dessous sont des filtres : seules sont affichées les lignes qui contiennent, pour le ou les champs que vous avez complétés, une valeur qui inclut ce que vous avez écrit dans le champ (en ignorant la casse).</p></div>
