:lipstick: (credits) ajout mention projet Cité des dames

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" id="favicon" type="image/png" href="Pierre%20Woeiriot%20-%20Barthelemy%20Aneau.png">
-    <title>Théâtre de femmes du 16e au 18e siècles</title>
+    <title>Théâtre de femmes du 16e au 18e siècle</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"
         integrity="sha512-dfX5uYVXzyU8+KHqj8bjo7UkOdg18PaOtpa48djpNbZHwExddghZ+ZmzWT06R5v6NSk3ZUfsH6FNEDepLx9hPQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -386,8 +386,9 @@ let histoireAutrices = {"Q6691":0,"Q1398":0,"Q7198":0,"Q128460":0,"Q260006":0,"Q
     <footer>
     <hr>
     <h3>À propos</h3>
-    Directeur éditorial, développement web : <a href="https://igm.univ-mlv.fr/~gambette">Philippe Gambette</a><br>
-    Données sources :
+    Ce site web a été développé dans le cadre du projet de recherche [Cité des dames, créatrices dans la cité](https://citedesdames.hypotheses.org/) qui a bénéficié, par le projet I-SITE Future, d'une aide de l'État gérée par l'Agence Nationale de la Recherche (ANR) au titre du programme d'investissements d'Avenir (référence ANR-16-IDEX-0003).<br><br>
+    Directeur éditorial (développement web, collecte de données)&nbsp;: <a href="https://igm.univ-mlv.fr/~gambette">Philippe Gambette</a><br>
+    Données sources&nbsp;:
     <em><a href="http://homes.chass.utoronto.ca/~trott/fem_aut.htm">Table des femmes auteurs, entrepreneurs et salonnières</a></em> (David Trott), 
     <em><a href="https://repertoiretheatreimprime.othone.com/">Répertoire du théâtre français imprimé au XVII<sup><small>e</small></sup> siècle</a></em> (Alain Riffaud), 
     <a href="https://wikidata.org">Wikidata</a>, 
@@ -396,9 +397,8 @@ let histoireAutrices = {"Q6691":0,"Q1398":0,"Q7198":0,"Q128460":0,"Q260006":0,"Q
     <a href="https://books.google.com">Google Books</a>, 
     <a href="https://xn--thtre-documentation-cvb0m.com/">théâtre-documentation.com</a>, 
     <a href="https://theatre-classique.fr/">theatre-classique.fr</a>.<br/>
-    Illustration : Anonyme, <em><a href="https://gallica.bnf.fr/ark:/12148/btv1b8407419q/">Mademoiselle Maupin de l'Opéra</a></em>, Bibliothèque nationale de France, département Estampes et photographie, RESERVE FOL-QB-201 (74), Gallica<br>
-    Pour les pages de titre des ouvrages ci-dessus, les sources sont fournies dans l'infobulle de l'image et en suivant le lien attaché à l'image.
-    <hr>
+    Illustration&nbsp;: Anonyme, <em><a href="https://gallica.bnf.fr/ark:/12148/btv1b8407419q/">Mademoiselle Maupin de l'Opéra</a></em>, Bibliothèque nationale de France, département Estampes et photographie, RESERVE FOL-QB-201 (74), Gallica<br>
+    Pour les pages de titre des ouvrages ci-dessus, les sources sont fournies dans l'infobulle de l'image et en suivant le lien attaché à l'image.<br/>
     Code de ce site disponible sous licence libre MIT <a href="https://github.com/citedesdames/theatre1618">sur GitHub</a>, hébergé par GitHub Pages.
     </footer>
 </body>
