:bento: (lettres) correction
650612.LCM02.BAYO

--- a/lettres.html
+++ b/lettres.html
@@ -2788,7 +2788,7 @@
     
     
     </article><article><h2 id='650612.LCM02.BAYO'>Lettre n° 650612.LCM02.BAYO<a href="https://beatricemundo.github.io/lettresmedicis6466/#650612.LCM02.BAYO">↑</a></h2><discours loc="CathMed" id="650612.LCM02.BAYO" date="1565—12juin">
-      <p> Monsieur du Ferrier, le sr de Rambouillet, présent gentilhomme ordinaire de la chambre du Roy monsieur mon filz, vous sçaura rendre si bon compte de la charge que nous luy avons donnée1, allant par delà, que me remectant sur sa suffisance, je vous prieray seullement le croyre de ce qu'il vous dira en cest endroict de nostre part, comme vous vouldriez fayre moy-mesmes; suppliant le Créateur vous donner, Monsieur du Ferrier, ce que désirez.</p>
+      <p> Monsieur du Ferrier, le sr de Rambouillet, présent gentilhomme ordinaire de la chambre du Roy monsieur mon filz, vous sçaura rendre si bon compte de la charge que nous luy avons donnée, allant par delà, que me remectant sur sa suffisance, je vous prieray seullement le croyre de ce qu'il vous dira en cest endroict de nostre part, comme vous vouldriez fayre moy-mesmes; suppliant le Créateur vous donner, Monsieur du Ferrier, ce que désirez.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">Robertet</hi>.  </p>
     </discours>
