:bento: (lettres) correction
651200.LCM02.SL.b

--- a/lettres.html
+++ b/lettres.html
@@ -3340,7 +3340,7 @@
     
     
     </article><article><h2 id='651200.LCM02.SL.b'>Lettre n° 651200.LCM02.SL.b<a href="https://beatricemundo.github.io/lettresmedicis6466/#651200.LCM02.SL.b">↑</a></h2><discours loc="CathMed" id="651200.LCM02.SL.b" date="(1565—Decembre!)">
-      <p>mon fils, j'é reseu la letre que
+      <p>Monsieur mon fils, j'é reseu la letre que
       par le sieur de Saynt Suplise m'avés ayscripte,
       et par lui entendu l'amytié que nous portés
       et la bonne volantes que avés à la continuation
