:bento: (lettres) correction
640228.LCM02M.FONT.b

--- a/lettres.html
+++ b/lettres.html
@@ -663,6 +663,7 @@
       Priant Dieu, Monsr de Renes, qu'il vous ayt
       en sa saincte garde. Escript à Fontainebleau,
       le XXVIIIe jour de febvrier 1563 (1564).</p>
+      <p><hi style="font-variant: small-caps">Caterine</hi>.</p>
     </discours>
     
     
