:bento: (lettres) paragraphes
640317.LCM02.SENS

--- a/lettres.html
+++ b/lettres.html
@@ -902,13 +902,149 @@
     
     
     </article><article><h2 id='640317.LCM02.SENS'>Lettre n° 640317.LCM02.SENS<a href="https://beatricemundo.github.io/lettresmedicis6466/#640317.LCM02.SENS">↑</a></h2><discours loc="CathMed" id="640317.LCM02.SENS" date="1564—17mars">
-      <p> Monsieur de Rennes, depuys le parlement de Plumelet, que je vous ay renvoyé au commencement de ce moys, j'ay receu les deux dépesches que m'avez faictes des XII et XIX du passé, ausquelles je n'ay pas grande responce à vous faire; car quant à ce qui concerne nostre entreveue générale, je n'ay riens à adjouter à ce que je vous en ay dernièrement escript; et puysque ces deux princes actendent la responce que y fera le roy d'Espaigne, mon beau-filz, avant que s'en voulloir résouldre, j'actenderay de mon costé en patience ce qu'ils m'en feront sçavoir, et quant la chose ne réussira pour le regard de ladicte entreveue généralle selon mon premier désir, il me suffira que l'on cognoisse que ce que j'en ay mis en avant et faict procurer n'a esté que pour le bien, repoz et trancquililé universelle de la chrestienté; mais parvenant à ce</p>
-      <p> que je vous ay dernièrement mandé pour l'aultre particulière, je demeureray aussy satisfaicte que d'aultre chose qui sçaurroyt succéder, tant je porte d'amityé au roy des Romains mon bon frère, et désire veoir establye entre luy et moy la mutuelle intelligence dont vous luy avez parlé par ci-devant. Je suis bien ayse que l'Empereur mon bon frère, par le discours que vous luy avez faict des déportements de Chantonnay, ayt esté contrainct de confesser quelque chose de ses maulvays offices, et si ce n'a esté de tous, pour le moings cognoist-il par la meilleure partie qu'il est ung très maulvays ministre, et que, pour l'inimytié qu'il nous porte, il n'a pas failly de desguyzer la vérité de beaucoup de choses, et par ainsy, qu'il ne se doibt pas laisser cy-après si aysément persuader aux choses qu'il pourroyt mectre en avant pour empescher l'establissement de nos alliances, où il se promet bien, s'il va par de là ambassadeur, ou qu'il passe en Espaigne, donner tout ce qu'il pourra de traverses et d'empeschement. Le cardinal son frère a pris congé de ma seur la duchesse de Parme, pour s'en aller en Bourgogne entendre, ainsy qu'il dict, au partaige de leur maison avant la mort de leur mère, qui est malade. Il a prins l'occasion dudict partaige pour couleur et prétexte de son congé, qu'il publye ne debvoir estre que de deux ou troys moys; toutefoys, aulcuns pensent que le terme en sera ung peu plus long, et que l'occasion est aultre qu'il ne veult dire, de quoy le temps nous esclaircyra. Pour le moings, est-il si peu aymé et regretté au Pays-Bas, que chascun se resjouyt de son esloignement. Vous sçaurcz dextrement en quelle opinion en sont ces deulx princes, et m'advertirez de ce que vous en aurez peu apprendre.</p>
-      <p> Au demourant, vous sçavez l'instance que l'Empereur nous fit à la fin de noz derniers troubles pour le regard des troys villes de Metz, Thou et Verdun, et en quelle allarme nous fusmes des retenues et levées qui se faisoyent en Allemagne, que l'on disoyt estre pour en faire l'entreprise: de sorte que, pour donner plus de contentement audict Empereur et aux princes de la Germanye, que nous estimons avoir ce faict fort à cueur, nous luy respondimes entre aultres choses que le Roy monsieur mon filz feroyt trouver ses ambassadeurs à la prochaine journée impérialle, pour leur faire responce si honneste et raisonnable sur le faict desdictcs troys villes, qu'ilz auroyent occasion d'en demourer satisfaictz. Et pour ce que vous me mandez que l'on en tient une toute certaine pour le prochain esté, il sera bien nécessaire que vous observiez le plus dextrement qu'il vous sera possible si, entre les choses que l'on dira s'i debvoir traicter, on n'y entremeslera point lesdictes troys villes, pour nous advertir incontinent de tout ce que vous en pourrez apprendre, et me mander de temps à aultre s'il vous semblera nécessaire que le Roy mondict sieur et filz y envoye, ou que nous laissions passer et escouller ladicte Diette sans en faire aulcun aultre semblant, qui est le party que je pensoys bien tousjours estre le meilleur advis, mais aussi considéray-je que la résolution ne s'en peult pas prendre de si loing et qu'il faudra veoir ce que le temps nous en conseillera pour le mieulx.</p>
-      <p> Nous sçaurons ce que le Pape respondra à la demande du mariaige des prestres et de la commission sub utraque, puysque la dépesche est partye pour en faire l'instance, et si nous voyons que l'Empereur mondict bon frère l'obtienne et que cela nous puisse servir de quelque chose, nous regarderons comme nous aurons à nous y gouverner de nostre part.</p>
-      <p> Ce n'est pas de ceste heure que j'ai ouy parler du mariage du prince d'Espaigne avec sa tante, mais j'ay tousjours entendu qu'il luy porte si peu d'affection qu'il a déclaré n'en vouloir point du tout, et est tellement ferme en ceste opinion, qu'il n'a pas été possible jusques icy de lui faire gouster ce mariage-là, qu'il monstre desdaigner grandement.</p>
-      <p> Mais que vous ayez sceu comme est passée la victoire du roy de Polloungue contre le Moscovite plus particulièrement que ne contient le mémoire que vous m'en avez envoyé, qui ne semble pas pouvoir estre fort certain quant à l'exécution de ladicte victoire, puisque l'advertisseur mande que, lorsqu'il l'escripvoit, l'on estoit encores à la poursuite de ladicte victoire, je seray bien ayse que vous m'en escripvez les particularitez. Nous sommes partys de Fontainebleau pour, en visitant les principales villes de ce pays de Champaigne, nous acheminer à Chaalons, où nous ferons la prochaine feste de Pasques, et incontinant après la feste de Quasimodo nous rendrons à Bar pour le baptesme de mon petit-filz. Ma fille, sa mère, a été bien fort malade de la petite vérolle et d'une grosse fiebvre, qui luy est survenue par dessus; mais elle se porte bien de ceste- heure, et allant en amandant et se fortiffiant de jour à autre, comme j'espère qu'elle fera entre cy et ladicte feste de Pasques, je ne pense pas que sa maladie puisse retarder notre voyaige plus loing que le temps que je vous mande cy-dessus. Ceulx que nous avons envoyés en Angleterre ne sont poinct encores retournés; s'ilz rapportent chose où il y ayt apparence de conclusion de paix, vous en serez incontinant adverty, priant Dieu, Monsieur de Renes, qu'il vous ayt en sa saincte garde.</p>
-      <p> Escript à Sens, le XVIIe jour de mars 1563 (1564).</p>
+      <p>Monsieur de Rennes, depuys le parlement
+      de Plumelet, que je vous ay renvoyé au commencement
+      de ce moys, j'ay receu les deux dépesches
+      que m'avez faictes des XII et XIX du
+      passé, ausquelles je n'ay pas grande responce
+      à vous faire; car quant à ce qui concerne nostre
+      entreveue générale, je n'ay riens à adjouter à
+      ce que je vous en ay dernièrement escript;
+      et puysque ces deux princes actendent la
+      responce que y fera le roy d'Espaigne, mon
+      beau-filz, avant que s'en voulloir résouldre,
+      j'actenderay de mon costé en patience ce qu'ils
+      m'en feront sçavoir, et quant la chose ne
+      réussira pour le regard de ladicte entreveue
+      généralle selon mon premier désir, il me
+      suffira que l'on cognoisse que ce que j'en ay
+      mis en avant et faict procurer n'a esté que
+      pour le bien, repoz et trancquililé universelle
+      de la chrestienté; mais parvenant à ce
+      que je vous ay dernièrement mandé pour
+      l'aultre particulière, je demeureray aussy
+      satisfaicte que d'aultre chose qui sçaurroyt
+      succéder, tant je porte d'amityé au roy des
+      Romains mon bon frère, et désire veoir establye
+      entre luy et moy la mutuelle intelligence
+      dont vous luy avez parlé par ci-devant. Je
+      suis bien ayse que l'Empereur mon bon frère,
+      par le discours que vous luy avez faict des
+      déportements de Chantonnay, ayt esté contrainct
+      de confesser quelque chose de ses
+      maulvays offices, et si ce n'a esté de tous,
+      pour le moings cognoist-il par la meilleure
+      partie qu'il est ung très maulvays ministre,
+      et que, pour l'inimytié qu'il nous porte, il n'a
+      pas failly de desguyzer la vérité de beaucoup
+      de choses, et par ainsy, qu'il ne se doibt pas
+      laisser cy-après si aysément persuader aux
+      choses qu'il pourroyt mectre en avant pour
+      empescher l'establissement de nos alliances,
+      où il se promet bien, s'il va par de là ambassadeur,
+      ou qu'il passe en Espaigne, donner
+      tout ce qu'il pourra de traverses et d'empeschement.
+      Le cardinal son frère a pris congé
+      de ma seur la duchesse de Parme, pour s'en
+      aller en Bourgogne entendre, ainsy qu'il dict,
+      au partaige de leur maison avant la mort de
+      leur mère, qui est malade. Il a prins l'occasion
+      dudict partaige pour couleur et prétexte de
+      son congé, qu'il publye ne debvoir estre que
+      de deux ou troys moys; toutefoys, aulcuns
+      pensent que le terme en sera ung peu plus
+      long, et que l'occasion est aultre qu'il ne veult
+      dire, de quoy le temps nous esclaircyra. Pour
+      le moings, est-il si peu aymé et regretté au
+      Pays-Bas, que chascun se resjouyt de son
+      esloignement. Vous sçaurcz dextrement en
+      quelle opinion en sont ces deulx princes, et
+      m'advertirez de ce que vous en aurez peu
+      apprendre.</p>
+      <p>Au demourant, vous sçavez l'instance que
+      l'Empereur nous fit à la fin de noz derniers
+      troubles pour le regard des troys villes de
+      Metz, Thou et Verdun, et en quelle allarme
+      nous fusmes des retenues et levées qui se
+      faisoyent en Allemagne, que l'on disoyt estre
+      pour en faire l'entreprise: de sorte que,
+      pour donner plus de contentement audict
+      Empereur et aux princes de la Germanye,
+      que nous estimons avoir ce faict fort à cueur,
+      nous luy respondimes entre aultres choses que
+      le Roy monsieur mon filz feroyt trouver ses
+      ambassadeurs à la prochaine journée impérialle,
+      pour leur faire responce si honneste et
+      raisonnable sur le faict desdictcs troys villes,
+      qu'ilz auroyent occasion d'en demourer satisfaictz.
+      Et pour ce que vous me mandez que
+      l'on en tient une toute certaine pour le prochain
+      esté, il sera bien nécessaire que vous
+      observiez le plus dextrement qu'il vous sera
+      possible si, entre les choses que l'on dira s'i
+      debvoir traicter, on n'y entremeslera point
+      lesdictes troys villes, pour nous advertir incontinent
+      de tout ce que vous en pourrez apprendre,
+      et me mander de temps à aultre
+      s'il vous semblera nécessaire que le Roy
+      mondict sieur et filz y envoye, ou que nous
+      laissions passer et escouller ladicte Diette sans
+      en faire aulcun aultre semblant, qui est le
+      party que je pensoys bien tousjours estre le
+      meilleur advis, mais aussi considéray-je que
+      la résolution ne s'en peult pas prendre de si
+      loing et qu'il faudra veoir ce que le temps
+      nous en conseillera pour le mieulx.</p>
+      <p>Nous sçaurons ce que le Pape respondra
+      à la demande du mariaige des prestres et de
+      la commission sub utraque, puysque la dépesche
+      est partye pour en faire l'instance, et
+      si nous voyons que l'Empereur mondict bon
+      frère l'obtienne et que cela nous puisse servir
+      de quelque chose, nous regarderons comme
+      nous aurons à nous y gouverner de nostre
+      part.</p>
+      <p>Ce n'est pas de ceste heure que j'ai ouy
+      parler du mariage du prince d'Espaigne avec
+      sa tante, mais j'ay tousjours entendu qu'il luy
+      porte si peu d'affection qu'il a déclaré n'en
+      vouloir point du tout, et est tellement ferme
+      en ceste opinion, qu'il n'a pas été possible
+      jusques icy de lui faire gouster ce mariage-là,
+      qu'il monstre desdaigner grandement.</p>
+      <p>Mais que vous ayez sceu comme est passée
+      la victoire du roy de Polloungue contre le Moscovite
+      plus particulièrement que ne contient
+      le mémoire que vous m'en avez envoyé, qui
+      ne semble pas pouvoir estre fort certain quant
+      à l'exécution de ladicte victoire, puisque l'advertisseur
+      mande que, lorsqu'il l'escripvoit, l'on
+      estoit encores à la poursuite de ladicte victoire,
+      je seray bien ayse que vous m'en escripvez les particularitez.
+      Nous sommes partys
+      de Fontainebleau pour, en visitant les principales
+      villes de ce pays de Champaigne, nous
+      acheminer à Chaalons, où nous ferons la prochaine
+      feste de Pasques, et incontinant après
+      la feste de Quasimodo nous rendrons à Bar pour
+      le baptesme de mon petit-filz. Ma fille, sa mère,
+      a été bien fort malade de la petite vérolle
+      et d'une grosse fiebvre, qui luy est survenue
+      par dessus; mais elle se porte bien de ceste-
+      heure, et allant en amandant et se fortiffiant
+      de jour à autre, comme j'espère qu'elle fera
+      entre cy et ladicte feste de Pasques, je ne
+      pense pas que sa maladie puisse retarder notre
+      voyaige plus loing que le temps que je vous
+      mande cy-dessus. Ceulx que nous avons envoyés
+      en Angleterre ne sont poinct encores
+      retournés; s'ilz rapportent chose où il y ayt
+      apparence de conclusion de paix, vous en
+      serez incontinant adverty, priant Dieu, Monsieur
+      de Renes, qu'il vous ayt en sa saincte
+      garde.</p>
+      <p>Escript à Sens, le XVIIe jour de mars 1563
+      (1564).</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">Bourdin</hi>.  </p>
     </discours>
