:bento: (lettres) paragraphes
641114.LCM10.MARI

--- a/lettres.html
+++ b/lettres.html
@@ -2179,7 +2179,8 @@
       <p> <rs type="passage-pouvoir">Lé gualeres de la Religion y sont veneues fayre la reverance <rs type="personne-famillepouvoir">au Roy mon fils</rs>; et y avons veu tent d'aunestes chevalier ayspagnols, ytalians et fransoys et de toutte nation, car son seulx qui ont aysté au Pignon de Vele, que vous ne viste jeamès heune plus aunes te conpagnie pour aystre de tant de nation. YI ont densé et fayst dé masque devent <rs type="personne-famillepouvoir">le Roy mon fils</rs>, et s'an vont fort contens, à set que l'on m'a dist, de sete court.</p>
       <p> Nous soumes partis a nuit, et veneu coucher à Marignane, pour après-demayn aystre enn Arle, aù acheveron de donner aurdre à toutte la Provense, afin que la lesions en pays, et qu'el i demeure, et après nous achèverons tousjour notre voyage, et, set pouvons, guagneron Toulouse, pour fayre Nouel, et après le plus tot que pourons Paris</rs>, <rs type="passage-famillepouvoir">au je voldrès avoyr aultent de heur que à Lion, de vous y voyr. Se sera quant y vous plera, més non jeamès si tot que je le desire; car vous avoir reveue si peu ne m'a fayst que plus de regret de ne povoyr aystre aurdinayrement auprès de vous</rs>.</p>
       <p> <rs type="passage-famille">Je prie à Dieu que ayés byentot eun aultre fils, afin que plus aysément vous puisié nous venir voyr</rs>. J'é grent envye de savoyr que ayé trové [bien] setlui que avès, de sorte que soyés ausi contente que vous desire.</p>
-      <p> <rs type="personne-famillepouvoir">Votre très humble é très hobeissante seur</rs>, <hi style="font-variant: small-caps">Caterine</hi>.  </p>
+      <p> <rs type="personne-famillepouvoir">Votre très humble é très hobeissante seur</rs>,</p>
+      <p><hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
     
     
