:bento: (lettres) correction
650124.LCM02.CARC.b

--- a/lettres.html
+++ b/lettres.html
@@ -2480,7 +2480,7 @@
     </discours>
     
     
-    </article><article><h2 id='650124.LCM02.CARC.B'>Lettre n° 650124.LCM02.CARC.B<a href="https://beatricemundo.github.io/lettresmedicis6466/#650124.LCM02.CARC.B">↑</a></h2><discours loc="CathMed" id="650124.LCM02.CARC.B" date="1565—24janvier1">
+    </article><article><h2 id='650124.LCM02.CARC.b'>Lettre n° 650124.LCM02.CARC.b<a href="https://beatricemundo.github.io/lettresmedicis6466/#650124.LCM02.CARC.b">↑</a></h2><discours loc="CathMed" id="650124.LCM02.CARC.b" date="1565—24janvier1">
       <p>Je vous prie, Monsieur de Foix, de faire entendre
       à ladicte dame que, tant pour la mémoire
       de l'amitié que le Roy monseigneur luy
