:bento: (lettres) correction
640731.LCM02.ROUS

--- a/lettres.html
+++ b/lettres.html
@@ -1709,7 +1709,7 @@
       mon cousin, qu'il vous ayt en sa garde.</p>
     Escript à Roussillon, le dernier jour de juillet 1564.</p>
     <p>Vostre bonne cousine,</p>
-    <p>Caterine.</p>
+    <p><hi style="font-variant: small-caps">Caterine</hi>.</p>
     <p>(De sa main.) Mon cousin, voyent que l'ons
       ha mis les armes en la Bastille et que seulx
       de la ville n'an sont guières contemps, j'euse
