:bento: (lettres) correction
640915.LCM10.MONT

--- a/lettres.html
+++ b/lettres.html
@@ -2103,7 +2103,7 @@
       lui ay mendé, et quant ayle sera malade que
       ne se layse plus tant segner.</p>
     <p><hi style="font-variant: small-caps">Caterine</hi>.</p>
-    <p>Et plus bas : <hi style="font-variant: small-caps">DELAUBESPINE./hi>.</p>     
+    <p>Et plus bas : <hi style="font-variant: small-caps">DELAUBESPINE.</hi>.</p>     
     </discours>
     
     
