:bento: (lettres) correction
650209.LCM02.TOUL

--- a/lettres.html
+++ b/lettres.html
@@ -2931,7 +2931,7 @@
       et que, de vostre voiage vous rapporterez
       tout contentement et satisffaction. Pryant
       Dieu, mon cousin, vous donner ce que désirez.
-      De Thoulouse, le ixe jour de février
+      De Thoulouse, le IXe jour de février
       1564 (1565).</p>
     <p> Vostre bonne cousine,</p>
     <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
