:bento: (lettres) OCR
650709.LCM02.STJE

--- a/lettres.html
+++ b/lettres.html
@@ -3600,7 +3600,21 @@
     
     
     </article><article><h2 id='650709.LCM02.STJE'>Lettre n° 650709.LCM02.STJE<a href="https://beatricemundo.github.io/lettresmedicis6466/#650709.LCM02.STJE">↑</a></h2><discours loc="CathMed" id="650709.LCM02.STJE" date="1565-9juillet">
-      <p> Monsieur du Ferrier, je me remectray sur le contenu de la lectre que le Roy monsieur mon filz vous escript présentement par où vous verrez bien le succès de nostre entreveue, dont nous désirons que vous advertissiez ces Seigneurs ensemble de ce qui touche de pardeçà le voyage de l'ambassadeur d'Algier affin qu'ilz cognoissent tousjours que nous ne voulons riens leur céler de noz actions, mays en parler franchement, comme nous avons tousjours faict; par quoy ne me restant aultre chose à vous dire pour ceste heure, je supplieray le Créateur vous donner, Monsieur du Ferrier, ce que désirez. Escript à St-Jehande- Luz, le ixc jour de juillet 1565.</p>
+    <p>Monsieur du Ferrier, je me remectray sur
+      le contenu de la lectre que le Roy monsieur
+      mon filz vous escript présentement par où
+      vous verrez bien le succès de nostre entreveue,
+      dont nous désirons que vous advertissiez ces
+      Seigneurs ensemble de ce qui touche de pardeçà
+      le voyage de l'ambassadeur d'Algier affin
+      qu'ilz cognoissent tousjours que nous ne voulons
+      riens leur céler de noz actions, mays en
+      parler franchement, comme nous avons tousjours
+      faict; par quoy ne me restant aultre
+      chose à vous dire pour ceste heure, je supplieray
+      le Créateur vous donner, Monsieur du
+      Ferrier, ce que désirez. Escript à St-Jehan-de.Luz,
+      le IXe jour de juillet 1565.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">Robertet</hi>.  </p>
     </discours>
