:bento: (lettres) correction
650709.LCM02.STJE

--- a/lettres.html
+++ b/lettres.html
@@ -3613,7 +3613,7 @@
       faict; par quoy ne me restant aultre
       chose à vous dire pour ceste heure, je supplieray
       le Créateur vous donner, Monsieur du
-      Ferrier, ce que désirez. Escript à St-Jehan-de.Luz,
+      Ferrier, ce que désirez. Escript à St-Jehan-de-Luz,
       le IXe jour de juillet 1565.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">Robertet</hi>.  </p>
