:bento (lettres) OCR
650709.LCM10.STJE

--- a/lettres.html
+++ b/lettres.html
@@ -3593,7 +3593,23 @@
     
     
     </article><article><h2 id='650709.LCM10.STJE'>Lettre n° 650709.LCM10.STJE<a href="https://beatricemundo.github.io/lettresmedicis6466/#650709.LCM10.STJE">↑</a></h2><discours loc="CathMed" id="650709.LCM10.STJE" date="1565-9juillet">
-      <p> Mon cousin, j'estime que l'occasion du voyage de ce porteur1 ne vous sera desagreable, tant pour le particulier recit qu'il vous fera des choses qui sont passées durant nostre entreveue avec la royne d'Espaigne ma fille, que pour les autres particularitez qui luy ont esté commises, desquelles il vous plaira le croire, et par luy nous faire sçavoir de vos nouvelles, qui seront tousjours fort agréablement receues en ceste compaignye, et surtout du Roy monsieur mon filz, pour la singulière amityé et affection qu'il vous porte et la correspondancequ'il se promet de vostre costé. Escript à St-Jehan-de-Luz, le ixe jour de juillet 1565. Vostre bonne cousine.</p>
+    <p>Mon cousin, j'estime que l'occasion du
+      voyage de ce porteur ne vous sera desagreable,
+      tant pour le particulier recit qu'il
+      vous fera des choses qui sont passées durant
+      nostre entreveue avec la royne d'Espaigne
+      ma fille, que pour les autres particularitez
+      qui luy ont esté commises, desquelles il vous
+      plaira le croire, et par luy nous faire sçavoir
+      de vos nouvelles, qui seront tousjours fort
+      agréablement receues en ceste compaignye,
+      et surtout du Roy monsieur mon filz, pour la
+      singulière amityé et affection qu'il vous porte
+      et la correspondancequ'il se promet de vostre
+      costé.</p>
+      <p>Escript à St-Jehan-de-Luz, le IXe jour de
+      juillet 1565.</p>
+      <p>Vostre bonne cousine.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> Et plus bas : <hi style="font-variant: small-caps">Bourdin</hi>.  </p>
     </discours>
